@@ -21,6 +21,8 @@
     * Deprecate 'layout' (use set). (Alberto Simões)
     * Definitely remove plack_middlewares HashRef deprecation.
       (Alberto Simões & Damien Krotkine)
+    * Second level of deprecation for mime_type method.
+      (Alberto Simões)
 
     [ BUG FIXES ]
     * Unbreaking auto_page somewhat - the catch-all route added will
